--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 
+  <h1>PedalPlex</h1>
+
+  <div class="results" id="results"></div>
+
   <div id="pedalboard"></div>
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
