--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Pedalboard</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>PedalPlex</title>
+  <link rel="stylesheet" href="https://unpkg.com/carbon-components/css/carbon-components.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <h1>PedalPlex</h1>
 
-  <div class="results" id="results"></div>
+  <div class="page-content">
+    
+    <div class="results" id="results"></div>
 
-  <div id="pedalboard"></div>
+    <div id="pedalboard"></div>
+
+  </div>
+
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="script.js"></script>
+  <script src="utils.js"></script>
+  <script src="nav.js"></script>
 
 </body>
 </html>
