--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
 
   <div class="page-content">
     
-
+    <div id="catalog"></div>
 
 
   </div>
@@ -20,8 +20,10 @@
 
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="nav.js"></script>
-<script src="test.js"></script>
+<script src="utils.js"></script>
+<script src="new-gear.js"></script>
+<script src="catalog.js"></script>
+<script src="nav-catalog.js"></script>
 
 </body>
 </html>
