--- a/404.html
+++ b/404.html
@@ -3,31 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PedalPlex</title>
+  <title>PedalPlex – Login / Register</title>
   <link rel="stylesheet" href="https://unpkg.com/carbon-components/css/carbon-components.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <div class="page-content">
+  <div style="margin-top:80px; max-width: 400px; margin-left: auto; margin-right: auto; text-align: center;">
+    <h2>404</h2>
+    <div id="catalog"></div>
     
-      <div id="pedalAddDropdownContainer"></div>
-      <div style="display: inline-flex; align-items: center; gap: 8px;">
-        <select id="pedalboardSelect"></select>
-        <button id="renameBoardBtn" class="bx--btn bx--btn--secondary bx--btn--sm" type="button">Edit</button>
-      </div>
-
-      <br><br><br><br>
-
-      <div id="pedalboard"></div>
-
   </div>
-
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="build.js"></script>
+  <script src="utils.js"></script>
   <script src="nav.js"></script>
+  <script src="404.js"></script>
+
 
 </body>
 </html>
