Redirect to index.html on authentication failure instead of auth.html

--- a/catalog.html
+++ b/catalog.html
@@ -59,7 +59,7 @@
 
       if (xhr.status === 401) {
         // Not authenticated: redirect to login
-        window.location.href = 'auth.html';
+        window.location.href = '/index.html';
       } else {
         Swal.fire({
           icon: 'error',
