--- a/preset.html
+++ b/preset.html
@@ -65,7 +65,7 @@
     },
       error: function(xhr) {
         if (xhr.status === 401) {
-          window.location.href = '/index.html';
+          window.location.href = 'index.html';
         } else {
           alert('Failed to verify authentication. Please try again.');
         }
