--- a/pedalboard.html
+++ b/pedalboard.html
@@ -61,7 +61,7 @@
       error: function(xhr) {
         console.error('Auth check failed:', xhr.status, xhr.responseText);
         if (xhr.status === 401) {
-          window.location.href = '/index.html';
+          window.location.href = 'index.html';
         } else {
           alert('Failed to verify authentication. Please try again.');
         }
