--- a/catalog.html
+++ b/catalog.html
@@ -31,45 +31,51 @@
     <script src="nav-catalog.js"></script>
   </div>
 
-<script>
-  $.ajax({
-    url: 'https://www.cineteatrosanluigi.it/plex/USER_CHECK_AUTH.php',
-    method: 'GET',
-    dataType: 'json',
-    xhrFields: { withCredentials: true },
-    success: function(userFromServer) {
+  <script>
+  // Check user authentication
+  $(document).ready(function() {
+    if (window.location.protocol === 'file:') {
+      alert('Please run this app via a local HTTP server for full functionality.');
 
       $('#loadingMessage').hide();
-      $('.page-content').show();
-
-      window.currentUser = userFromServer;  // Save globally
-
-      // Initialize nav passing the authenticated user from server
-      if (typeof initNavCatalog === 'function') {
-        initNavCatalog(userFromServer.username);
-      }
-
-      // Call a function in catalog.js to init and pass the role
-      if (typeof initCatalog === 'function') {
-        initCatalog(userFromServer.role);
-      }
-    },
-    error: function(xhr) {
-      $('#loadingMessage').hide();
-
-      if (xhr.status === 401) {
-        // Not authenticated: redirect to login
-        window.location.href = 'index.html';
-      } else {
-        Swal.fire({
-          icon: 'error',
-          title: 'Error',
-          text: 'Failed to verify authentication. Please try again later.'
-        });
-      }
+      $('#pageContent').hide();
+      return;
     }
+
+    const token = localStorage.getItem('authToken');
+    if (!token) {
+      window.location.href = 'index.html';
+      return;
+    }
+
+    $.ajax({
+      url: 'https://www.cineteatrosanluigi.it/plex/USER_CHECK_AUTH_JWT.php',
+      method: 'GET',
+      dataType: 'json',
+      headers: {
+        'Authorization': 'Bearer ' + token
+      },
+      success: function(userFromServer) {
+        $('#loadingMessage').hide();
+        $('#pageContent').show();
+
+        window.currentUser = userFromServer;
+
+        if (typeof initNavPedalboard === 'function') initNavPedalboard();
+        if (typeof initPedalboard === 'function') initPedalboard();
+      },
+      error: function(xhr) {
+        console.error('Auth check failed:', xhr.status, xhr.responseText);
+        if (xhr.status === 401) {
+          localStorage.removeItem('authToken');
+          window.location.href = 'index.html';
+        } else {
+          alert('Failed to verify authentication. Please try again.');
+        }
+      }
+    });
   });
-</script>
+  </script>
 
 
 </body>
