--- a/preset.html
+++ b/preset.html
@@ -47,30 +47,49 @@
   <script src="nav-preset.js"></script>
 
   <script>
-    $.ajax({
-    url: 'https://www.cineteatrosanluigi.it/plex/USER_CHECK_AUTH.php',
-    method: 'GET',
-    dataType: 'json',
-    xhrFields: { withCredentials: true },
-    success: function(userFromServer) {
+  // Check user authentication
+  $(document).ready(function() {
+    if (window.location.protocol === 'file:') {
+      alert('Please run this app via a local HTTP server for full functionality.');
 
       $('#loadingMessage').hide();
-      $('.page-content').show();
+      $('#pageContent').hide();
+      return;
+    }
 
-      window.currentUser = userFromServer;  // Save globally
+    const token = localStorage.getItem('authToken');
+    if (!token) {
+      window.location.href = 'index.html';
+      return;
+    }
 
-      if (typeof initNavPreset === 'function') initNavPreset();
-      if (typeof initPreset === 'function') initPreset(window.currentUser);
-      
-    },
+    $.ajax({
+      url: 'https://www.cineteatrosanluigi.it/plex/USER_CHECK_AUTH_JWT.php',
+      method: 'GET',
+      dataType: 'json',
+      headers: {
+        'Authorization': 'Bearer ' + token
+      },
+      success: function(userFromServer) {
+        $('#loadingMessage').hide();
+        $('#pageContent').show();
+
+        window.currentUser = userFromServer;
+
+        if (typeof initNavPedalboard === 'function') initNavPedalboard();
+        if (typeof initPedalboard === 'function') initPedalboard();
+      },
       error: function(xhr) {
+        console.error('Auth check failed:', xhr.status, xhr.responseText);
         if (xhr.status === 401) {
+          localStorage.removeItem('authToken');
           window.location.href = 'index.html';
         } else {
           alert('Failed to verify authentication. Please try again.');
         }
       }
     });
+  });
   </script>
 
 </body>
