Refactor authentication handling in catalog, preset, and profile pages

--- a/catalog.html
+++ b/catalog.html
@@ -57,12 +57,12 @@
       },
       success: function(userFromServer) {
         $('#loadingMessage').hide();
-        $('#pageContent').show();
+        $('.page-content').show();
 
         window.currentUser = userFromServer;
 
         if (typeof initNavPedalboard === 'function') initNavPedalboard();
-        if (typeof initPedalboard === 'function') initPedalboard();
+        if (typeof initCatalog === 'function') initCatalog(userFromServer.role);
       },
       error: function(xhr) {
         console.error('Auth check failed:', xhr.status, xhr.responseText);
