--- a/preset.html
+++ b/preset.html
@@ -77,7 +77,7 @@
         window.currentUser = userFromServer;
 
         if (typeof initNavPedalboard === 'function') initNavPedalboard();
-        if (typeof initPedalboard === 'function') initPedalboard();
+        if (typeof initPedalboard === 'function') initPreset();
       },
       error: function(xhr) {
         console.error('Auth check failed:', xhr.status, xhr.responseText);
