--- a/catalog.html
+++ b/catalog.html
@@ -61,6 +61,8 @@
 
         window.currentUser = userFromServer;
 
+        console.log(userFromServer.role)
+
         if (typeof initNavCatalog === 'function') initNavCatalog();
         if (typeof initCatalog === 'function') initCatalog(userFromServer.role);
       },
