--- a/preset.html
+++ b/preset.html
@@ -73,6 +73,7 @@
       success: function(userFromServer) {
         $('#loadingMessage').hide();
         $('#pageContent').show();
+        $('#preset-controls').show();
 
         window.currentUser = userFromServer;
 
