--- a/preset.html
+++ b/preset.html
@@ -54,6 +54,7 @@
 
       $('#loadingMessage').hide();
       $('#pageContent').hide();
+      $('#preset-controls').hide();
       return;
     }
 
