--- a/preset.html
+++ b/preset.html
@@ -21,7 +21,8 @@
   </div>
   
   <!-- Main content area -->
-  <div id="pageContent" style="display: none;">
+  <div id="pageContent">
+    <div id="pedalAddDropdownContainer"></div>
     <div id="preset-controls" style="display: none; align-items: center; gap: 8px;">
       <select id="pedalboardSelect"></select>
       <select id="presetSelect" style="margin-left: 16px;"></select>
