--- a/preset.html
+++ b/preset.html
@@ -21,8 +21,7 @@
   </div>
   
   <!-- Main content area -->
-  <div id="pageContent">
-    <div id="pedalAddDropdownContainer"></div>
+  <div id="page-content">
     <div id="preset-controls" style="display: none; align-items: center; gap: 8px;">
       <select id="pedalboardSelect"></select>
       <select id="presetSelect" style="margin-left: 16px;"></select>
@@ -54,7 +53,7 @@
       alert('Please run this app via a local HTTP server for full functionality.');
 
       $('#loadingMessage').hide();
-      $('#pageContent').hide();
+      $('#page-content').hide();
       $('#preset-controls').hide();
       return;
     }
