final bugfix auth

--- a/catalog.html
+++ b/catalog.html
@@ -38,7 +38,7 @@
       alert('Please run this app via a local HTTP server for full functionality.');
 
       $('#loadingMessage').hide();
-      $('#pageContent').hide();
+      $('#page-content').hide();
       return;
     }
 
