--- a/pedalboard.html
+++ b/pedalboard.html
@@ -68,7 +68,7 @@
       },
       success: function(userFromServer) {
         $('#loadingMessage').hide();
-        $('#pageContent').show();
+        $('#page-content').show();
 
         window.currentUser = userFromServer;
 
