--- a/preset.html
+++ b/preset.html
@@ -73,7 +73,7 @@
       },
       success: function(userFromServer) {
         $('#loadingMessage').hide();
-        $('#pageContent').show();
+        $('#page-content').show();
         $('#preset-controls').show();
 
         window.currentUser = userFromServer;
