test bugfix pedalboard

--- a/pedalboard.html
+++ b/pedalboard.html
@@ -22,7 +22,7 @@
   
   <div id="page-content">
     <!-- <div class="page-content"> -->
-      <!-- <div id="pedalAddDropdownContainer"></div> -->
+      <div id="pedalAddDropdownContainer"></div>
       <div id="pedalboard-controls" style="display: none; align-items: center; gap: 8px;">
         <select id="pedalboardSelect"></select>
         <button id="renameBoardBtn" class="bx--btn bx--btn--secondary" type="button">Edit</button>
