--- a/preset.html
+++ b/preset.html
@@ -60,7 +60,7 @@
 
     const token = localStorage.getItem('authToken');
     if (!token) {
-      window.location.href = '/';
+      window.location.href = '/PedalPlex/';
       return;
     }
 
@@ -85,7 +85,7 @@
         console.error('Auth check failed:', xhr.status, xhr.responseText);
         if (xhr.status === 401) {
           localStorage.removeItem('authToken');
-          window.location.href = '/';
+          window.location.href = '/PedalPlex/';
         } else {
           alert('Failed to verify authentication. Please try again.');
         }
