--- a/catalog.html
+++ b/catalog.html
@@ -44,7 +44,7 @@
 
     const token = localStorage.getItem('authToken');
     if (!token) {
-      window.location.href = '/';
+      window.location.href = '/PedalPlex/';
       return;
     }
 
@@ -70,7 +70,7 @@
         console.error('Auth check failed:', xhr.status, xhr.responseText);
         if (xhr.status === 401) {
           localStorage.removeItem('authToken');
-          window.location.href = '/';
+          window.location.href = '/PedalPlex/';
         } else {
           alert('Failed to verify authentication. Please try again.');
         }
