--- a/pedalboard.html
+++ b/pedalboard.html
@@ -55,7 +55,7 @@
 
     const token = localStorage.getItem('authToken');
     if (!token) {
-      window.location.href = '/';
+      window.location.href = '/PedalPlex/';
       return;
     }
 
@@ -79,7 +79,7 @@
         console.error('Auth check failed:', xhr.status, xhr.responseText);
         if (xhr.status === 401) {
           localStorage.removeItem('authToken');
-          window.location.href = '/';
+          window.location.href = '/PedalPlex/';
         } else {
           alert('Failed to verify authentication. Please try again.');
         }
