--- a/404.html
+++ b/404.html
@@ -21,6 +21,10 @@
   <script src="nav-404.js"></script>
   <script src="404.js"></script>
 
+  <script>
+    if (typeof initNav404 === 'function') initNav404();
+  </script>
+
 
 </body>
 </html>
