--- a/404.html
+++ b/404.html
@@ -18,6 +18,7 @@
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="utils.js"></script>
+  <script src="fullscreen-menu.js"></script>
   <script src="nav-404.js"></script>
   <script src="404.js"></script>
 
