test remove checking authentication message after each page laod

--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
         <circle class="bx--loading__stroke" cx="50" cy="50" r="44" stroke-width="8"></circle>
       </svg>
     </div>
-    Checking authentication...
+    <!-- Checking authentication... -->
   </div>
   
   <div id="page-content" style="display: none;">
