--- a/pedalboard.html
+++ b/pedalboard.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <div id="loadingMessage" style="font-size:1.2em; text-align:center; margin-top: 2em; display: flex; flex-direction: column; align-items: center; gap: 0.5em;">
+  <!-- <div id="loadingMessage" style="font-size:1.2em; text-align:center; margin-top: 2em; display: flex; flex-direction: column; align-items: center; gap: 0.5em;">
     <div class="bx--loading bx--loading--small" role="alert" aria-live="assertive" aria-label="Loading">
       <svg class="bx--loading__svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
         <circle class="bx--loading__background" cx="50" cy="50" r="44" stroke-width="8"></circle>
@@ -18,7 +18,7 @@
       </svg>
     </div>
     Checking authentication...
-  </div>
+  </div> -->
   
   <div id="page-content">
     <!-- <div class="page-content"> -->
