--- a/pedalboard.html
+++ b/pedalboard.html
@@ -33,7 +33,7 @@
       <div id="pedalboard"></div>
 
       <br>
-      <span id="startPresetBtn" style="display: none;">
+      <span id="startPresetBtn" style="display: none;display: flex; justify-content: center; align-items: center; height: 30vh; text-align: center; flex-direction: column; gap: 1em;">
         Ready to work with you pedalboard? 
           <button onclick="window.location.href='preset'" class="bx--btn bx--btn--secondary" type="button">Create a preset</button>
       </span>
